src/objects/Weight__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planet Fitness, Austintown</fullName>
                </value>
                <value>
                    <fullName>JCC, Youngstown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Weight</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date__c</columns>
        <columns>Weight__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>W-{0000000}</displayFormat>
        <label>Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>